test.h

typedef struct _IO_marker {
  uint8_t _unused[0];
} _IO_marker;
typedef long __off_t;
typedef void _IO_lock_t;
typedef long __off64_t;
typedef struct _IO_codecvt {
  uint8_t _unused[0];
} _IO_codecvt;
typedef struct _IO_wide_data {
  uint8_t _unused[0];
} _IO_wide_data;
typedef struct _IO_FILE {
  int _flags;
  char *_IO_read_ptr;
  char *_IO_read_end;
  char *_IO_read_base;
  char *_IO_write_base;
  char *_IO_write_ptr;
  char *_IO_write_end;
  char *_IO_buf_base;
  char *_IO_buf_end;
  char *_IO_save_base;
  char *_IO_backup_base;
  char *_IO_save_end;
  struct _IO_marker *_markers;
  struct _IO_FILE *_chain;
  int _fileno;
  int _flags2;
  __off_t _old_offset;
  unsigned short _cur_column;
  signed char _vtable_offset;
  char _shortbuf[1];
  _IO_lock_t *_lock;
  __off64_t _offset;
  struct _IO_codecvt *_codecvt;
  struct _IO_wide_data *_wide_data;
  struct _IO_FILE *_freeres_list;
  void *_freeres_buf;
  struct _IO_FILE **_prevchain;
  int _mode;
  char _unused2[20];
} _IO_FILE;
typedef struct _IO_FILE FILE;
typedef long __ssize_t;
typedef __ssize_t (*cookie_read_function_t)(void *__cookie, char *__buf,
                                            uintptr_t __nbytes);
typedef __ssize_t (*cookie_write_function_t)(void *__cookie, const char *__buf,
                                             uintptr_t __nbytes);
typedef int (*cookie_seek_function_t)(void *__cookie, __off64_t *__pos,
                                      int __w);
typedef int (*cookie_close_function_t)(void *__cookie);
typedef struct _IO_cookie_io_functions_t {
  cookie_read_function_t read;
  cookie_write_function_t write;
  cookie_seek_function_t seek;
  cookie_close_function_t close;
} _IO_cookie_io_functions_t;
typedef struct _IO_cookie_io_functions_t cookie_io_functions_t;
typedef struct __va_list_tag {
  unsigned int gp_offset;
  unsigned int fp_offset;
  void *overflow_arg_area;
  void *reg_save_area;
} __va_list_tag;
typedef struct _G_fpos_t {
  __off_t __pos;
  struct __mbstate_t __state;
} _G_fpos_t;
typedef struct _G_fpos_t __fpos_t;
typedef __fpos_t fpos_t;
extern int remove(const char *__filename);
extern int rename(const char *__old, const char *__new);
extern int renameat(int __oldfd, const char *__old, int __newfd,
                    const char *__new);
extern int fclose(FILE *__stream);
extern FILE *tmpfile(void);
extern char *tmpnam(char *arg1);
extern char *tmpnam_r(char *__s);
extern char *tempnam(const char *__dir, const char *__pfx);
extern int fflush(FILE *__stream);
extern int fflush_unlocked(FILE *__stream);
extern FILE *fopen(const char *__filename, const char *__modes);
extern FILE *freopen(const char *__filename, const char *__modes,
                     FILE *__stream);
extern FILE *fdopen(int __fd, const char *__modes);
extern FILE *fopencookie(void *__magic_cookie, const char *__modes,
                         cookie_io_functions_t __io_funcs);
extern FILE *fmemopen(void *__s, uintptr_t __len, const char *__modes);
extern FILE *open_memstream(char **__bufloc, uintptr_t *__sizeloc);
extern void setbuf(FILE *__stream, char *__buf);
extern int setvbuf(FILE *__stream, char *__buf, int __modes, uintptr_t __n);
extern void setbuffer(FILE *__stream, char *__buf, uintptr_t __size);
extern void setlinebuf(FILE *__stream);
extern int fprintf(FILE *__stream, const char *__format, ...);
extern int printf(const char *__format, ...);
extern int sprintf(char *__s, const char *__format, ...);
extern int vfprintf(FILE *__s, const char *__format,
                    struct __va_list_tag *__arg);
extern int vprintf(const char *__format, struct __va_list_tag *__arg);
extern int vsprintf(char *__s, const char *__format,
                    struct __va_list_tag *__arg);
extern int snprintf(char *__s, unsigned long __maxlen, const char *__format,
                    ...);
extern int vsnprintf(char *__s, unsigned long __maxlen, const char *__format,
                     struct __va_list_tag *__arg);
extern int vasprintf(char **__ptr, const char *__f,
                     struct __va_list_tag *__arg);
extern int __asprintf(char **__ptr, const char *__fmt, ...);
extern int asprintf(char **__ptr, const char *__fmt, ...);
extern int vdprintf(int __fd, const char *__fmt, struct __va_list_tag *__arg);
extern int dprintf(int __fd, const char *__fmt, ...);
extern int fscanf(FILE *__stream, const char *__format, ...);
extern int scanf(const char *__format, ...);
extern int sscanf(const char *__s, const char *__format, ...);
extern int fscanf1(FILE *__stream, const char *__format, ...);
extern int scanf1(const char *__format, ...);
extern int sscanf1(const char *__s, const char *__format, ...);
extern int vfscanf(FILE *__s, const char *__format,
                   struct __va_list_tag *__arg);
extern int vscanf(const char *__format, struct __va_list_tag *__arg);
extern int vsscanf(const char *__s, const char *__format,
                   struct __va_list_tag *__arg);
extern int vfscanf1(FILE *__s, const char *__format,
                    struct __va_list_tag *__arg);