src/GeoIP.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _IO_FILE"][::std::mem::size_of::<_IO_FILE>() - 216usize];
    ["Alignment of _IO_FILE"][::std::mem::align_of::<_IO_FILE>() - 8usize];
    ["Offset of field: _IO_FILE::_flags"][::std::mem::offset_of!(_IO_FILE, _flags) - 0usize];
    ["Offset of field: _IO_FILE::_IO_read_ptr"]
        [::std::mem::offset_of!(_IO_FILE, _IO_read_ptr) - 8usize];
    ["Offset of field: _IO_FILE::_IO_read_end"]
        [::std::mem::offset_of!(_IO_FILE, _IO_read_end) - 16usize];
    ["Offset of field: _IO_FILE::_IO_read_base"]
        [::std::mem::offset_of!(_IO_FILE, _IO_read_base) - 24usize];
    ["Offset of field: _IO_FILE::_IO_write_base"]
        [::std::mem::offset_of!(_IO_FILE, _IO_write_base) - 32usize];
    ["Offset of field: _IO_FILE::_IO_write_ptr"]
        [::std::mem::offset_of!(_IO_FILE, _IO_write_ptr) - 40usize];
    ["Offset of field: _IO_FILE::_IO_write_end"]
        [::std::mem::offset_of!(_IO_FILE, _IO_write_end) - 48usize];
    ["Offset of field: _IO_FILE::_IO_buf_base"]
        [::std::mem::offset_of!(_IO_FILE, _IO_buf_base) - 56usize];
    ["Offset of field: _IO_FILE::_IO_buf_end"]
        [::std::mem::offset_of!(_IO_FILE, _IO_buf_end) - 64usize];
    ["Offset of field: _IO_FILE::_IO_save_base"]
        [::std::mem::offset_of!(_IO_FILE, _IO_save_base) - 72usize];
    ["Offset of field: _IO_FILE::_IO_backup_base"]
        [::std::mem::offset_of!(_IO_FILE, _IO_backup_base) - 80usize];
    ["Offset of field: _IO_FILE::_IO_save_end"]
        [::std::mem::offset_of!(_IO_FILE, _IO_save_end) - 88usize];
    ["Offset of field: _IO_FILE::_markers"][::std::mem::offset_of!(_IO_FILE, _markers) - 96usize];
    ["Offset of field: _IO_FILE::_chain"][::std::mem::offset_of!(_IO_FILE, _chain) - 104usize];
    ["Offset of field: _IO_FILE::_fileno"][::std::mem::offset_of!(_IO_FILE, _fileno) - 112usize];
    ["Offset of field: _IO_FILE::_flags2"][::std::mem::offset_of!(_IO_FILE, _flags2) - 116usize];
    ["Offset of field: _IO_FILE::_old_offset"]
        [::std::mem::offset_of!(_IO_FILE, _old_offset) - 120usize];
    ["Offset of field: _IO_FILE::_cur_column"]
        [::std::mem::offset_of!(_IO_FILE, _cur_column) - 128usize];
    ["Offset of field: _IO_FILE::_vtable_offset"]
        [::std::mem::offset_of!(_IO_FILE, _vtable_offset) - 130usize];
    ["Offset of field: _IO_FILE::_shortbuf"]
        [::std::mem::offset_of!(_IO_FILE, _shortbuf) - 131usize];
    ["Offset of field: _IO_FILE::_lock"][::std::mem::offset_of!(_IO_FILE, _lock) - 136usize];
    ["Offset of field: _IO_FILE::_offset"][::std::mem::offset_of!(_IO_FILE, _offset) - 144usize];
    ["Offset of field: _IO_FILE::_codecvt"][::std::mem::offset_of!(_IO_FILE, _codecvt) - 152usize];
    ["Offset of field: _IO_FILE::_wide_data"]
        [::std::mem::offset_of!(_IO_FILE, _wide_data) - 160usize];
    ["Offset of field: _IO_FILE::_freeres_list"]
        [::std::mem::offset_of!(_IO_FILE, _freeres_list) - 168usize];
    ["Offset of field: _IO_FILE::_freeres_buf"]
        [::std::mem::offset_of!(_IO_FILE, _freeres_buf) - 176usize];
    ["Offset of field: _IO_FILE::_prevchain"]
        [::std::mem::offset_of!(_IO_FILE, _prevchain) - 184usize];
    ["Offset of field: _IO_FILE::_mode"][::std::mem::offset_of!(_IO_FILE, _mode) - 192usize];
    ["Offset of field: _IO_FILE::_unused2"][::std::mem::offset_of!(_IO_FILE, _unused2) - 196usize];
};
pub type cookie_read_function_t = ::std::option::Option<
    unsafe extern "C" fn(
        __cookie: *mut ::std::ffi::c_void,
        __buf: *mut ::std::ffi::c_char,
        __nbytes: usize,
    ) -> __ssize_t,
>;
pub type cookie_write_function_t = ::std::option::Option<
    unsafe extern "C" fn(
        __cookie: *mut ::std::ffi::c_void,
        __buf: *const ::std::ffi::c_char,
        __nbytes: usize,
    ) -> __ssize_t,
>;
pub type cookie_seek_function_t = ::std::option::Option<
    unsafe extern "C" fn(
        __cookie: *mut ::std::ffi::c_void,
        __pos: *mut __off64_t,
        __w: ::std::ffi::c_int,
    ) -> ::std::ffi::c_int,
>;
pub type cookie_close_function_t = ::std::option::Option<
    unsafe extern "C" fn(__cookie: *mut ::std::ffi::c_void) -> ::std::ffi::c_int,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _IO_cookie_io_functions_t {
    pub read: cookie_read_function_t,
    pub write: cookie_write_function_t,
    pub seek: cookie_seek_function_t,
    pub close: cookie_close_function_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _IO_cookie_io_functions_t"]
        [::std::mem::size_of::<_IO_cookie_io_functions_t>() - 32usize];
    ["Alignment of _IO_cookie_io_functions_t"]
        [::std::mem::align_of::<_IO_cookie_io_functions_t>() - 8usize];
    ["Offset of field: _IO_cookie_io_functions_t::read"]
        [::std::mem::offset_of!(_IO_cookie_io_functions_t, read) - 0usize];
    ["Offset of field: _IO_cookie_io_functions_t::write"]
        [::std::mem::offset_of!(_IO_cookie_io_functions_t, write) - 8usize];
    ["Offset of field: _IO_cookie_io_functions_t::seek"]
        [::std::mem::offset_of!(_IO_cookie_io_functions_t, seek) - 16usize];
    ["Offset of field: _IO_cookie_io_functions_t::close"]
        [::std::mem::offset_of!(_IO_cookie_io_functions_t, close) - 24usize];
};
pub type cookie_io_functions_t = _IO_cookie_io_functions_t;
pub type va_list = __gnuc_va_list;
pub type fpos_t = __fpos_t;
extern "C" {
    pub static mut stdin: *mut FILE;
}
extern "C" {
    pub static mut stdout: *mut FILE;
}
extern "C" {
    pub static mut stderr: *mut FILE;
}
extern "C" {
    pub fn remove(__filename: *const ::std::ffi::c_char) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn rename(
        __old: *const ::std::ffi::c_char,
        __new: *const ::std::ffi::c_char,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn renameat(
        __oldfd: ::std::ffi::c_int,
        __old: *const ::std::ffi::c_char,
        __newfd: ::std::ffi::c_int,
        __new: *const ::std::ffi::c_char,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn fclose(__stream: *mut FILE) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn tmpfile() -> *mut FILE;
}
extern "C" {
    pub fn tmpnam(arg1: *mut ::std::ffi::c_char) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn tmpnam_r(__s: *mut ::std::ffi::c_char) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn tempnam(
        __dir: *const ::std::ffi::c_char,
        __pfx: *const ::std::ffi::c_char,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn fflush(__stream: *mut FILE) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn fflush_unlocked(__stream: *mut FILE) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn fopen(
        __filename: *const ::std::ffi::c_char,
        __modes: *const ::std::ffi::c_char,
    ) -> *mut FILE;
}
extern "C" {
    pub fn freopen(
        __filename: *const ::std::ffi::c_char,
        __modes: *const ::std::ffi::c_char,
        __stream: *mut FILE,
    ) -> *mut FILE;
}
extern "C" {
    pub fn fdopen(__fd: ::std::ffi::c_int, __modes: *const ::std::ffi::c_char) -> *mut FILE;
}
extern "C" {
    pub fn fopencookie(
        __magic_cookie: *mut ::std::ffi::c_void,
        __modes: *const ::std::ffi::c_char,
        __io_funcs: cookie_io_functions_t,
    ) -> *mut FILE;
}
extern "C" {
    pub fn fmemopen(
        __s: *mut ::std::ffi::c_void,
        __len: usize,
        __modes: *const ::std::ffi::c_char,
    ) -> *mut FILE;
}
extern "C" {
    pub fn open_memstream(
        __bufloc: *mut *mut ::std::ffi::c_char,
        __sizeloc: *mut usize,
    ) -> *mut FILE;
}
extern "C" {
    pub fn setbuf(__stream: *mut FILE, __buf: *mut ::std::ffi::c_char);
}
extern "C" {
    pub fn setvbuf(
        __stream: *mut FILE,
        __buf: *mut ::std::ffi::c_char,
        __modes: ::std::ffi::c_int,
        __n: usize,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn setbuffer(__stream: *mut FILE, __buf: *mut ::std::ffi::c_char, __size: usize);
}
extern "C" {
    pub fn setlinebuf(__stream: *mut FILE);
}
extern "C" {
    pub fn fprintf(
        __stream: *mut FILE,
        __format: *const ::std::ffi::c_char,
        ...
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn printf(__format: *const ::std::ffi::c_char, ...) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn sprintf(
        __s: *mut ::std::ffi::c_char,
        __format: *const ::std::ffi::c_char,
        ...
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn vfprintf(
        __s: *mut FILE,
        __format: *const ::std::ffi::c_char,
        __arg: *mut __va_list_tag,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn vprintf(
        __format: *const ::std::ffi::c_char,
        __arg: *mut __va_list_tag,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn vsprintf(
        __s: *mut ::std::ffi::c_char,
        __format: *const ::std::ffi::c_char,
        __arg: *mut __va_list_tag,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn snprintf(
        __s: *mut ::std::ffi::c_char,
        __maxlen: ::std::ffi::c_ulong,
        __format: *const ::std::ffi::c_char,
        ...
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn vsnprintf(
        __s: *mut ::std::ffi::c_char,
        __maxlen: ::std::ffi::c_ulong,
        __format: *const ::std::ffi::c_char,
        __arg: *mut __va_list_tag,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn vasprintf(
        __ptr: *mut *mut ::std::ffi::c_char,
        __f: *const ::std::ffi::c_char,
        __arg: *mut __va_list_tag,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn __asprintf(
        __ptr: *mut *mut ::std::ffi::c_char,
        __fmt: *const ::std::ffi::c_char,
        ...
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn asprintf(
        __ptr: *mut *mut ::std::ffi::c_char,
        __fmt: *const ::std::ffi::c_char,
        ...
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn vdprintf(
        __fd: ::std::ffi::c_int,
        __fmt: *const ::std::ffi::c_char,
        __arg: *mut __va_list_tag,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn dprintf(
        __fd: ::std::ffi::c_int,
        __fmt: *const ::std::ffi::c_char,
        ...
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn fscanf(
        __stream: *mut FILE,
        __format: *const ::std::ffi::c_char,
        ...
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn scanf(__format: *const ::std::ffi::c_char, ...) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn sscanf(
        __s: *const ::std::ffi::c_char,
        __format: *const ::std::ffi::c_char,
        ...
    ) -> ::std::ffi::c_int;
}
pub type _Float32 = f32;
pub type _Float64 = f64;
pub type _Float32x = f64;
pub type _Float64x = u128;
extern "C" {
    #[link_name = "\u{1}__isoc99_fscanf"]
    pub fn fscanf1(
        __stream: *mut FILE,
        __format: *const ::std::ffi::c_char,
        ...
    ) -> ::std::ffi::c_int;
}
extern "C" {
    #[link_name = "\u{1}__isoc99_scanf"]
    pub fn scanf1(__format: *const ::std::ffi::c_char, ...) -> ::std::ffi::c_int;
}
extern "C" {
    #[link_name = "\u{1}__isoc99_sscanf"]
    pub fn sscanf1(
        __s: *const ::std::ffi::c_char,
        __format: *const ::std::ffi::c_char,
        ...
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn vfscanf(
        __s: *mut FILE,
        __format: *const ::std::ffi::c_char,
        __arg: *mut __va_list_tag,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn vscanf(
        __format: *const ::std::ffi::c_char,
        __arg: *mut __va_list_tag,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn vsscanf(
        __s: *const ::std::ffi::c_char,
        __format: *const ::std::ffi::c_char,
        __arg: *mut __va_list_tag,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    #[link_name = "\u{1}__isoc99_vfscanf"]
    pub fn vfscanf1(
        __s: *mut FILE,
        __format: *const ::std::ffi::c_char,
        __arg: *mut __va_list_tag,
    ) -> ::std::ffi::c_int;
}
